--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -1,3 +1,10 @@
+// Công cụ căn giữa nhanh
+@mixin flex-center-between {
+    display: flex;
+    justify-content: space-between; // Dàn đều 2 bên
+    align-items: center;
+}
+
 @mixin flex-center {
     display: flex;
     justify-content: center;
