--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,1 +1,12 @@
 @use '../abstracts' as abs;
+
+.site-footer {
+    background-color: abs.$footer-bg;
+    color: abs.$white;
+    padding: 20px 0;
+    margin-top: auto;
+
+    .container {
+        @include abs.flex-center; // Căn giữa nội dung footer
+    }
+}
