--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,1 +1,36 @@
+// assets/scss/layout/_header.scss
 @use '../abstracts' as abs;
+
+.site-header {
+    background-color: abs.$primary-color;
+    padding: 1rem 0;
+    color: abs.$white;
+
+    .container {
+        // Mixin này giúp Logo sang trái, Menu sang phải
+        @include abs.flex-center-between; 
+    }
+
+    .logo {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: abs.$white;
+        text-decoration: none;
+    }
+
+    .main-nav ul {
+        display: flex; // Dàn ngang các món trong menu
+        gap: 20px;     // Khoảng cách giữa các món
+        list-style: none;
+
+        a {
+            color: abs.$white; // Dùng biến màu trắng
+            text-decoration: none;
+            opacity: 0.8;
+            
+            &:hover {
+                opacity: 1;
+            }
+        }
+    }
+}
