--- a/assets/scss/components/_product-card.scss
+++ b/assets/scss/components/_product-card.scss
@@ -1,1 +1,38 @@
-@use '../abstracts' as abs;
+@use '../abstracts' as *;
+
+.product-card {
+    border: 1px solid $primary-color;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 30px;
+
+    &__img {
+        width: 100%;
+        object-fit: cover;
+    }
+
+    &__content {
+        @include flex-center;
+        flex-direction: column;
+        padding: 5px 0;
+    }
+
+    &__sale {
+        position: relative;
+    }
+
+    &__badge {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 5px 0 0 5px;
+        background-color: $bgbadge-color;
+        color: $badge-color;
+        border-radius: 4px;
+    }
+
+    &:hover {
+        transform: translateY(-4px);
+        box-shadow: 4px 4px 4px rgba(0,0,0,0.1);
+    }
+}
