--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -1,8 +1,14 @@
-@use '../abstracts' as abs;
+@use '../abstracts' as *;
+
+.app {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+}
 
 .container {
-    max-width: abs.$container-width; // Dùng biến độ rộng
-    margin: 0 auto; // Căn giữa màn hình
-    padding: 0 15px; // Khoảng đệm 2 bên mép mobile
+    max-width: 1200px;
     width: 100%;
+    margin-inline: auto;
+    padding-inline: 1rem;
 }
