--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,11 @@
 @use 'base/reset';
 
+@use 'components/button';
+@use 'components/card';
+@use 'components/product-card';
+
+@use 'layout/footer';
+@use 'layout/grid';
 @use 'layout/header';
 @use 'layout/hero';
-@use 'layout/grid';
-@use 'layout/footer';
-
-@use 'components/button';
-@use 'components/product-card';
+@use 'layout/main';
